# virtual_tactile_pad

./: .gitignore  .gitmodules  README.md  command.txt  tmp.txt
ros_ws/src/virtual_tactile_pad/: CMakeLists.txt  package.xml
ros_ws/src/virtual_tactile_pad/config/: config.yaml  controllers.yaml  end_effector.txt  ft_pad_ee_config.json
ros_ws/src/virtual_tactile_pad/data/processed/: position_error_statistics.csv
ros_ws/src/virtual_tactile_pad/data/raw/: data_20241126_085811.csv  data_20241202_141405.csv  data_20241206_090207.csv  data_20241206_090710.csv  data_20241206_090942.csv  data_20241206_091048.csv  data_20241206_092959.csv  data_20241206_093053.csv  data_20241206_093110.csv  data_20241216_162208.csv  data_20241219_154311.csv  data_20241220_102746.csv  data_20241220_102808.csv  data_20241220_102847.csv  data_20241220_102917.csv  data_PF_1.csv  data_PF_2.csv  (+69 more)
ros_ws/src/virtual_tactile_pad/launch/: contact_visualization.launch  contact_viz.launch  cylinder_balancing.launch  cylinder_equilibrium.launch  data_saver.launch  digital_recognition.launch  digits_recognition.launch  dynamic_movement.launch  panda_rviz.launch  panda_test.launch  panda_visualization.launch  pos_controller.launch  test.launch
ros_ws/src/virtual_tactile_pad/models/: scaler_X.pkl  scaler_y.pkl  wrench_correction_model.pkl
ros_ws/src/virtual_tactile_pad/msg/: ContactForce.msg
ros_ws/src/virtual_tactile_pad/rviz/: ft_config.rviz
ros_ws/src/virtual_tactile_pad/scripts/: pino_test.py  throwing_controller_elastic_arm.py  trajectory_plotter.py
ros_ws/src/virtual_tactile_pad/src/: cylinder_balancing.py  data_saver_node.py  digits_recognition_node.py  dynamic_movement.py  ft_process_node.py  optitrack_calibration_node.py  panda_process_node.py  pos_controller.py  trajectory_plotter.py  visualize_node.py
ros_ws/src/virtual_tactile_pad/urdf/: ati_net_gamma.urdf  ati_pad.urdf  panda_arm.urdf  panda_arm.urdf.xacro  panda_pad.urdf  tactile_pad.urdf
(+44 files in other folders)
