<?xml version="1.0"?>
<package format="2">
  <name>virtual_tactile_pad</name>
  <version>0.0.0</version>
  <description>The tactile pad package</description>

  <maintainer email="rayan.gauderon@epfl.ch">Rayan Gauderon</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>franka_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>franka_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>franka_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>